src/objects/DocuSignSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>ab</description>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>Account Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntegratorKey__c</fullName>
        <label>Integrator Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordIdPrefix__c</fullName>
        <description>This field is to store DocuSign Status Record Id Prefix</description>
        <inlineHelpText>This field is to store DocuSign Status Record Id Prefix</inlineHelpText>
        <label>Record Id Prefix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>DocuSign Setting</label>
</CustomObject>